--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,9 @@
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Oxygen:300,400,700' rel='stylesheet' type='text/css'>
       <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href="./css/vendor/angular-flash.css" rel="stylesheet" type='text/css'>
     <script src="bundle.js"></script>
+    <script src="./js/vendor/angular-flash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
 
   </head>
